<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speeker</string>
    <string name="app_version">v?</string>
    <string name="action_speak">Speak</string>
    <string name="action_stop">Stop</string>
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_more">More</string>
    <string name="label">Text to Speak</string>
    <string name="action_web_site">Website</string>
    <string name="action_licenses">Licenses</string>
    <string name="logo">Speeker Logo</string>
    <string name="copyright">© 2014 &lt;a href="http://chriswarrick.com/">Chris “Kwpolska” Warrick&lt;/a></string>
    <string name="ok">OK</string>
    <string name="notts_title">TTS failed to start</string>
    <string name="notts_message">The TTS engine failed to start.  Speeker can’t continue.</string>
    <string name="close">Close</string>
    <string name="too_long">Input too long.</string>
</resources>