<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chriswarrick.speeker.MainActivity" >


    <item android:id="@+id/action_speak"
          android:icon="@drawable/ic_action_mic"
          android:title="@string/action_speak"
          android:showAsAction="always" />
    <item android:id="@+id/action_stop"
          android:icon="@drawable/ic_action_stop"
          android:title="@string/action_stop"
          android:showAsAction="always" android:visible="false"/>
    <item android:id="@+id/action_clear"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_clear"
          android:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_more">
        <menu>
        <!--
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                android:showAsAction="never" /> -->
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about" android:showAsAction="never" />
        </menu>
    </item>
</menu>
