<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:gravity="center_horizontal"
	android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.chriswarrick.speeker.AboutActivity">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:gravity="center_horizontal"
			android:orientation="vertical">
			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="20dp" android:contentDescription="@string/logo"
				android:src="@drawable/ic_launcher" />

			<TextView
			    android:id="@+id/textName"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="23dp"
			    android:gravity="center"
			    android:text="@string/app_name"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:textSize="40sp"
			    android:textStyle="bold" />

			<TextView android:id="@+id/textVersion"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/app_version" android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="30sp" />

			<TextView android:id="@+id/textCopyright"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="31dp" android:fontFamily="sans-serif-condensed"
				android:gravity="center" android:linksClickable="true" android:text="@string/copyright"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" />

		</LinearLayout>
	</ScrollView>
</LinearLayout>